Project card update: - Fixed scroll functionality - Added custom scrollbar to project details paragraph

--- a/style.css
+++ b/style.css
@@ -187,7 +187,7 @@ nav {
     left: 0px;
     width: 100%;
     height: 100%;
-    padding: 20px 50px 20px 20px;
+    padding: 20px 100px 20px 20px;
     opacity: 0;
     background-color: #2b2b2b75;
     backdrop-filter: blur(8px);
@@ -198,7 +198,25 @@ nav {
     }
 
     p{
-        overflow-y: scroll;
+        overflow: auto;
+        height: 50%;
+    }
+
+    p::-webkit-scrollbar {
+        width: 4px;
+    }
+    
+    p::-webkit-scrollbar-thumb {
+        background-color: rgba(255, 255, 255, 0.3);
+        border-radius: 4px;
+    }
+    
+    p::-webkit-scrollbar-thumb:hover {
+        background-color: rgba(255, 255, 255, 0.5);
+    }
+    
+    p::-webkit-scrollbar-track {
+        background: transparent;
     }
 }
 
@@ -398,6 +416,12 @@ picture img {
         justify-content: space-evenly;
         box-sizing: border-box;
     }
+
+    #projects{
+        padding-bottom: 35px;
+    }
+
+    
 }
 
 #background-image {
